--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,6 +37,7 @@
 
                     <button type="submit">Login</button>
                 </form>
+                <!-- <a href="/user-p">Visit User Page</a> -->
             </div>
 
             <!-- Signup Form -->
